<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMain">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="300dp"
        android:layout_height="370dp"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:background="#A43030"
        app:cardCornerRadius="20dp"
        app:cardElevation="5dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/app_name"
            android:textColor="@color/textColor"
            android:textSize="15sp"
            app:fontFamily="@font/roboto" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingBottom="30dp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="270dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:backgroundTint="@color/buttonColor"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <ListView
                    android:id="@+id/listView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonMinsk"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/buttonMinsk"
            android:textSize="15sp"
            android:textColor="@color/textColor"
            android:backgroundTint="@color/white"
            app:cornerRadius="10dp"
            app:elevation="5dp"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonBrest"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/buttonBrest"
            android:textSize="15sp"
            android:textColor="@color/textColor"
            android:backgroundTint="@color/white"
            app:cornerRadius="10dp"
            app:elevation="5dp"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonMogilev"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/buttonMogilev"
            android:textSize="15sp"
            android:textColor="@color/textColor"
            android:backgroundTint="@color/white"
            app:cornerRadius="10dp"
            app:elevation="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonVitebsk"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:text="@string/buttonVitebsk"
            android:textSize="15sp"
            android:textColor="@color/textColor"
            android:backgroundTint="@color/white"
            app:cornerRadius="10dp"
            app:elevation="5dp"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonGrodno"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:text="@string/buttonGrodno"
            android:textSize="15sp"
            android:textColor="@color/textColor"
            android:backgroundTint="@color/white"
            app:cornerRadius="10dp"
            app:elevation="5dp"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonGomel"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:text="@string/buttonGomel"
            android:textSize="15sp"
            android:textColor="@color/textColor"
            android:backgroundTint="@color/white"
            app:cornerRadius="10dp"
            app:elevation="5dp"/>

    </LinearLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/choiceButton"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/buttonFind"
        android:textSize="15sp"
        android:textColor="@color/textColor"
        android:backgroundTint="@color/buttonColor"
        app:cornerRadius="20dp"
        app:elevation="5dp"/>

</LinearLayout>